syntax = "proto3";

package communication;

import "state.proto";

// Message that can carry a variety of payload types
message data_message {
    oneof {
        world_state state = 1;
    }
}

// Message used for controlling communication and reporting errors
message control_message {
    int32 error_code = 1;         // Error code
    string error_description = 2; // Human-readable description of the error
}

// Universal message format that encapsulates various types of messages
message universal_message {
    oneof message_content {
        DataMessage data = 1;
        ControlMessage control = 2;
    }
}
